Fixed text alignment and background colour issues

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ p {
 
 #welcome-section {
   /* border: 1px solid red; */
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -42,12 +43,14 @@ p {
 }
 
 #projects {
-  height: 100vh;
+  min-height: 100vh;
+  max-height: fit-content;
   background-color: #213030;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 #projects-container {
@@ -58,6 +61,7 @@ p {
   column-gap: 2.5rem;
   row-gap: 2.5rem;
   flex-wrap: wrap;
+  margin-bottom: 2.5rem;
 }
 
 .projects-item {
